--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <h2 align="center">TIME TABLE FOR CSE DEPARTMENT</h2>
       </font><br />
       <h1>
-        <marquee direction="right"><a href="../progsweb/TimeTableA.html">Time Table For CSE 5th Sem A Section</a><br /></marquee>
-        <marquee direction="left"><a href="../progsweb/TimeTableB.html">Time Table For CSE 5th Sem B Section</a><br /></marquee>
-        <marquee direction="right"><a href="../progsweb/TimeTableC.html">Time Table For CSE 5th Sem C Section</a><br /></marquee>
-        <marquee direction="left"><a href="../progsweb/TimeTableD.html">Time Table For CSE 5th Sem D Section</a><br /></marquee>
+        <marquee direction="right"><a href="../TimeTableA.html">Time Table For CSE 5th Sem A Section</a><br /></marquee>
+        <marquee direction="left"><a href="../TimeTableB.html">Time Table For CSE 5th Sem B Section</a><br /></marquee>
+        <marquee direction="right"><a href="../TimeTableC.html">Time Table For CSE 5th Sem C Section</a><br /></marquee>
+        <marquee direction="left"><a href="../TimeTableD.html">Time Table For CSE 5th Sem D Section</a><br /></marquee>
       </h1>
     </strong>
   </body>
