--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <head>
     <title>TIme Table</title>
   </head>
-  <body bgcolor="black">
+  <body>
     <img src="ait.jpg" height="125" width="120" alt="logo" align="left" />
-    <strong
-      ><font color="white">
+    <strong>
         <h1 align="center">Dr. AMBEDKAR INSTITUTE OF TECHNOLOGY</h1>
         <h2 align="center">DEPARTMENT OF COMPUTER SCIENCE & ENGINEERING</h2>
-        <h2 align="center">TIME TABLE FOR CSE DEPARTMENT</h2> </font
-      ><br />
+        <h2 align="center">TIME TABLE FOR CSE DEPARTMENT</h2><br />
       <h1>
         <marquee direction="right"
           ><a href="TimeTableA.html"
