--- a/TimeTableD.html
+++ b/TimeTableD.html
@@ -56,7 +56,7 @@
         <tr>
           <th>Monday</th>
           <th>IDE</th>
-          <th>AI<br />AWT</th>
+          <th>AI/<br />AWT</th>
           <th>JAVA</th>
           <th>CN</th>
           <th>SE</th>
