--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>TIme Table</title>
+    <title>Time Table</title>
   </head>
   <body>
     <img src="ait.jpg" height="125" width="120" alt="logo" align="left" />
